<resources>
    <string name="app_name">MARVEL TRAILERS</string>
    <string name="marvel_trailers_logo_description">Marvel Trailers Logo</string>
    <string name="marvel_universe_description">Marvel Universe</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="the_marvel_universe">THE MARVEL UNIVERSE</string>
    <string name="help">Help</string>
    <string name="view_trailers">View trailers</string>
    <string name="discussion_room">Discussion room</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="welcome_message">Welcome to Marvel trailers!</string>
    <string name="share_message">Share this app you love!</string>
    <string name="ask_help">Ask admin for help!</string>


    <string name="thumbnail_image_view_desc">Youtube Video thumbnail image view</string>
    <string name="close_player_activity">Close Player activity</string>
    <string name="list_trailer_view_heading">View your favorite trailer</string>
    <string name="compose_email">Compose Email</string>
    <string name="ask_admin_for_help">Ask admin for help!</string>
    <string name="admin_email">ask.admin@gmail.com</string>
    <string name="send_your_queries_to_admin">Send your queries to the admin!</string>
    <string name="subject">Subject :</string>
    <string name="to">To :</string>
    <string name="send">Send</string>
    <string name="enter_mobile">Enter Mobile #</string>
    <string name="share_via_sms_text">I love this app called Marvel Trailers, you may download this on the Play store via this link \nhttps://play.google.com/store/apps/details?id=MarvelTrailers</string>

    <!--  we need to use video ids instead of video link  -->
    <string-array name="video_id_array">
        <item>osSJhXruEzU</item>
        <item>6ZfuNTqbHE8</item>
        <item>0LHxvxdRnYc</item>
        <item>ybji16u608U</item>
        <item>6ZfuNTqbHE8</item>
        <item>TcMBFSGVi1c</item>
        <item>Z1BCujX3pw8</item>
        <item>ue80QwXMRHg</item>
        <item>xjDjIWPwcPU</item>
        <item>pWdKf3MneyI</item>
    </string-array>

    <string-array name="video_title_array">
        <item>Iron Man Vs Thanos - Fight Scene - Avengers Infinity War (2018)</item>
        <item>Marvel Studios Avengers: Infinity War Official Trailer</item>
        <item>Marvel Studios Captain Marvel - Trailer 2</item>
        <item>Marvel Studios Black Widow | Final Trailer</item>
        <item>Marvel Studios Avengers: Infinity War Official Trailer</item>
        <item>Marvel Studios Avengers: Endgame - Official Trailer</item>
        <item>Marvel Studios Captain Marvel - Official Trailer</item>
        <item>Thor: Ragnarok Official Trailer</item>
        <item>Marvel Studios Black Panther - Official Trailer</item>
        <item>Marvel\'s Ant-Man - Trailer 1</item>
    </string-array>

    <string-array name="video_duration_array">
        <item>02:48</item>
        <item>00:44</item>
        <item>01:01</item>
        <item>00:55</item>
        <item>01:03</item>
        <item>00:25</item>
        <item>00:34</item>
        <item>00:45</item>
        <item>00:52</item>
        <item>00:28</item>
    </string-array>

</resources>
